# promptune

./: .cursorrules  .gitignore  AGENTS.md  README.md  promptune.example.yaml  promptune.yaml  pyproject.toml  test_promptune.py
.windsurf/workflows/: optimize-prompt.md
datasets/: code_assistant.json  email_writer_negatives_only.json  email_writer_with_negatives.json  math_tutor.json  sentiment_classifier.json  text_summarizer.json
examples/: custom_target_example.py
mcp_servers/: __init__.py
mcp_servers/adversarial_optimizer/: __init__.py  optimizer.py
mcp_servers/beam_orchestrator/: __init__.py  orchestrator.py  server.py
mcp_servers/clarity_rewriter/: __init__.py  optimizer.py
mcp_servers/evaluator/: __init__.py  evaluator.py  server.py
mcp_servers/example_augmentor/: __init__.py  optimizer.py
mcp_servers/few_shot_optimizer/: __init__.py  optimizer.py  server.py
mcp_servers/meta_prompt_optimizer/: __init__.py  optimizer.py  server.py
mcp_servers/orchestrator/: __init__.py  orchestrator.py  server.py
mcp_servers/targets/: __init__.py  base.py  llm_target.py
mcp_servers/utils/: __init__.py  config.py  data_loader.py  llm.py  logger.py  output_saver.py
schemas/: __init__.py  models.py
skills/adversarial_optimizer/: SKILL.md
skills/beam_orchestrator/: SKILL.md
skills/clarity_rewriter/: SKILL.md
skills/evaluator/: SKILL.md
skills/example_augmentor/: SKILL.md
skills/few_shot_optimizer/: SKILL.md
skills/meta_prompt_optimizer/: SKILL.md
skills/promptune/: SKILL.md
tests/: __init__.py
tests/unit/: test_beam_orchestrator.py  (+6 more)
