[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptune"
version = "0.1.0"
description = "LLM prompt optimization via beam search"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastmcp>=0.1.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["schemas", "mcp_servers"]
